--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=vazirmatn:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@font-face {
+  font-family: "Yekan Bakh;
+  src: url(../public/YekanBakh-Heavy.woff);
+}
 
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
   margin: 0;
+  box-sizing: border-box;
+  font-family: "Yekan Bakh", sans-serif;
 }
 
 body {
-  font-family: "Vazirmatn", sans-serif;
+  font-family: "Yekan Bakh", sans-serif;
   background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.3)), url(bg.jpg);
   background-position: 50% 50%;
   background-repeat: no-repeat;
