--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,13 @@
 @font-face {
-  font-family: "Yekan Bakh;
+  font-family: "Yekan Bakh";
   src: url(../public/YekanBakh-Heavy.woff);
 }
 
 *,
 *::after,
 *::before {
-  margin: 0;
   box-sizing: border-box;
-  font-family: "Yekan Bakh", sans-serif;
+  margin: 0;
 }
 
 body {
