--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Yekan Bakh";
-  src: url(../public/YekanBakh-Heavy.woff);
+  src: url(./YekanBakh-Heavy.woff);
 }
 
 *,
